# DSP

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CITATION.cff  CMakeLists.txt  FindGfortran.cmake  INSTALL  INSTALL.md  LICENSE  PREREQUISITES.md  README  README.md  RELEASE.md  UserConfig.cmake  config_path.cmake  deploy_ed25519.enc  deploy_rsa.enc  get.essentials  get.essentials.archlinux  get.essentials.debian  get.essentials.macosx  get.essentials.opensuse  get.essentials.redhat  get_mpi4py_include.py  mkdocs.yml
examples/CInterface/: CMakeLists.txt  farmers.cpp  farmersQP.cpp
extra/: .gitignore  CMakeLists.txt
extra/OOQP-0.99.25/: .gitignore  GNUmakefile.in  INSTALL  INSTALLED-MANIFEST  MANIFEST  NEWS  README_Matlab  README_Windows  VERSION  configure  configure.ac
extra/OOQP-0.99.25/doc/: index.html
extra/OOQP-0.99.25/src/: .gitignore
extra/ma27-1.0.0/: LICENCE  Makefile.am  Makefile.in  README  acinclude.m4  configure  configure.ac
extra/ma27-1.0.0/example/: Makefile.am  Makefile.in  ma27ds.f  ma27ds.output  ma27ss.f  ma27ss.output  runtest.sh
extra/ma27-1.0.0/m4/: ax_f90_module_flag.m4
extra/ma27-1.0.0/src/: Makefile.am  Makefile.in  ma27d.f  ma27s.f
extra/scipoptsuite-3.1.1/: INSTALL  Makefile  Makefile.doit  gcg-2.0.1.tgz  soplex-2.0.1.tgz  ug-0.7.5.tgz  zimpl-3.3.2.tgz
src/: .gitignore  CMakeLists.txt  DspApiEnv.cpp  DspApiEnv.h  DspCInterface.cpp  DspCInterface.h  DspConfig.h  DspDriver.cpp  DspDriver.h  DspDriverMpi.cpp  DspDriverMpi.h  PyDsp.i  StoApiEnv.cpp  StoApiEnv.h  StoCInterface.cpp  StoCInterface.h  dsp.cpp  main.cpp
src/Model/: BlkModel.cpp  BlkModel.h  CMakeLists.txt  DecBlkModel.cpp  DecBlkModel.h  DecData.cpp  DecData.h  DecDetModel.cpp  DecDetModel.h  DecModel.h  DecTssModel.cpp  DecTssModel.h  DecTssQcModel.cpp  DecTssQcModel.h  DetBlock.h  DetModel.cpp  DetModel.h  Node.h  QcModel.cpp  QcModel.h  StoModel.cpp  StoModel.h  TreeModel.h  TssModel.cpp  TssModel.h
src/PyDsp/: CMakeLists.txt  PyDsp.cpp  PyDsp.i  PyDsp.py  PyDspMpi.i
src/Solver/: BaseMasterWorker.cpp  BaseMasterWorker.h  CMakeLists.txt  DecDdMaster.h  DecDdMasterDSB.cpp  DecDdMasterDSB.h  DecDdMasterSubgrad.cpp  DecDdMasterSubgrad.h  DecDdMpi.cpp  DecDdMpi.h  DecDdPrimalMaster.cpp  DecDdPrimalMaster.h  DecDdSub.cpp  DecDdSub.h  DecDe.cpp  DecDe.h  DecSolver.cpp  DecSolver.h  DecTssSolver.h  DspDriver.cpp  DspDriver.h  OoqpEps.cpp  OoqpEps.h  OoqpStatus.cpp  SCIPbranchruleLB.cpp  SCIPconshdlrBenders.cpp  SCIPconshdlrBendersDd.cpp  SolverInterfaceClp.cpp  SolverInterfaceClp.h  SolverInterfaceOoqp.cpp  SolverInterfaceOoqp.h  SolverInterfaceOsi.cpp  SolverInterfaceOsi.h  SolverInterfaceScip.cpp  SolverInterfaceScip.h  SolverInterfaceSpx.cpp  SolverInterfaceSpx.h  StoParam.h  TssBd.cpp  TssBd.h  (+19 more)
src/Solver/Benders/: BdDriver.cpp  BdDriver.h  BdDriverMpi.cpp  BdDriverMpi.h  BdDriverSerial.cpp  BdDriverSerial.h  BdMW.cpp  BdMW.h  BdMWMpi.cpp  BdMWMpi.h  BdMWSerial.cpp  BdMWSerial.h  BdMaster.cpp  BdMaster.h  BdSub.cpp  BdSub.h  BdWorker.cpp  BdWorker.h  BdWorkerMpi.cpp  BdWorkerMpi.h  BendersCallback.cpp  BendersCallback.h  CMakeLists.txt  SCIPconshdlrBaseBendersWorker.cpp  SCIPconshdlrBaseBendersWorker.h  SCIPconshdlrBenders.cpp  SCIPconshdlrBenders.h  SCIPconshdlrBendersWorker.cpp  SCIPconshdlrBendersWorker.h  SCIPconshdlrDrBenders.cpp  SCIPconshdlrDrBenders.h  SCIPconshdlrDrBendersWorker.cpp  SCIPconshdlrDrBendersWorker.h  SCIPconshdlrIntBenders.cpp  SCIPconshdlrIntBenders.h  SCIPconshdlrIntBendersWorker.cpp  SCIPconshdlrIntBendersWorker.h  SCIPheurIntBenders.cpp  SCIPheurIntBenders.h
src/Solver/DantzigWolfe/: CMakeLists.txt  DwAlgo.cpp  DwAlgo.h  DwBranch.h  DwBranchGenDisj.cpp  DwBranchGenDisj.h  DwBranchInt.cpp  DwBranchInt.h  DwBranchNonant.cpp  DwBranchNonant.h  DwBranchNonant2.cpp  DwBranchNonant2.h  DwBundleDual.cpp  DwBundleDual.h  DwBundleDualPips.cpp  DwBundleDualPips.h  DwBundleDualSmip.cpp  DwBundleDualSmip.h  DwBundlePipsInput.cpp  DwBundlePipsInput.h  DwCol.h  DwFeasPump.cpp  DwFeasPump.h  DwHeuristic.cpp  DwHeuristic.h  DwMaster.cpp  DwMaster.h  DwMasterTr.cpp  DwMasterTr.h  DwMasterTrLight.cpp  DwMasterTrLight.h  DwModel.cpp  DwModel.h  DwModelSmip.cpp  DwModelSmip.h  DwSolverMpi.cpp  DwSolverMpi.h  DwSolverSerial.cpp  DwSolverSerial.h  DwWorker.cpp  (+7 more)
src/Solver/Deprecated/: DecDdAsyncMpi.cpp  DecDdAsyncMpi.h  DecDdMaster.h  DecDdMasterDSB.cpp  DecDdMasterDSB.h  DecDdMasterSubgrad.cpp  DecDdMasterSubgrad.h  DecDdMpi.cpp  DecDdMpi.h  DecDdPrimalMaster.cpp  DecDdPrimalMaster.h  DecDdSub.cpp  DecDdSub.h  DecDe.cpp  DecDe.h  DecSolver.cpp  DecSolver.h  DecTssSolver.h  TssBd.cpp  TssBd.h  TssBdMpi.cpp  TssBdMpi.h  TssBdSub.cpp  TssBdSub.h  TssEval.cpp  TssEval.h  TssSolver.cpp  TssSolver.h
src/Solver/Deterministic/: CMakeLists.txt  DeDriver.cpp  DeDriver.h
src/Solver/DualDecomp/: CMakeLists.txt  DdDriver.h  (+58 more)
src/SolverInterface/: CMakeLists.txt  DspOsi.h  DspOsiCbc.h  DspOsiClp.h  DspOsiCpx.h  DspOsiGlpk.h  DspOsiGrb.h  DspOsiOoqp.h  DspOsiOoqpEps.h  DspOsiScip.h  OoqpEps.cpp  OoqpEps.h  OoqpStatus.cpp  OoqpStatus.h  OsiOoqpSolverInterface.cpp  OsiOoqpSolverInterface.h  OsiOoqpSolverInterface.hpp  OsiScipSolverInterface.cpp  OsiScipSolverInterface.hpp  SCIPbranchruleLB.cpp  SCIPbranchruleLB.h  SCIPconshdlrBenders.cpp  SCIPconshdlrBenders.h  SCIPconshdlrBendersDd.cpp  SCIPconshdlrBendersMPI.cpp  SolverInterface.h  SolverInterfaceClp.cpp  SolverInterfaceClp.h  SolverInterfaceCpx.cpp  SolverInterfaceCpx.h  SolverInterfaceOoqp.cpp  SolverInterfaceOoqp.h  SolverInterfaceOsi.cpp  SolverInterfaceOsi.h  SolverInterfaceScip.cpp  SolverInterfaceScip.h  SolverInterfaceSpx.cpp  SolverInterfaceSpx.h
src/TreeSearch/: CMakeLists.txt  DspBranch.h  DspBranchObj.h  DspHeuristic.h  DspModel.cpp  DspModel.h  DspNodeDesc.h  DspNodeSolution.h  DspTreeNode.cpp  DspTreeNode.h
src/Utility/: CMakeLists.txt  DspMacros.h  DspMessage.h  DspMpi.cpp  DspMpi.h  DspParams.cpp  DspParams.h  DspRtnCodes.h  DspTypes.h  DspUtility.h  StoConfig.h  StoMacros.h  StoMessage.cpp  StoMessage.h  StoRtnCodes.h  StoSmpsScenario.h  StoUtility.cpp  StoUtility.h
src/test/: CMakeLists.txt
(+1618 files in other folders)
