##################################################
# PyDsp library: Python interface
##################################################
find_package(PythonLibs)
set(PYDSP_COMPILE OFF)
if (PYTHONLIBS_FOUND)
	find_package(SWIG)
	if (SWIG_FOUND)
		if (MPI_CXX_FOUND)
			execute_process(COMMAND python ${CMAKE_SOURCE_DIR}/get_mpi4py_include.py
				RESULT_VARIABLE MPI4PY_NOT_FOUND
				OUTPUT_VARIABLE MPI4PY_INCLUDE)
			if (MPI4PY_NOT_FOUND EQUAL 0)
				set(PYDSP_COMPILE ON)
				set(PYDSP_I "${CMAKE_SOURCE_DIR}/src/PyDsp/PyDspMpi.i")
				string(REPLACE "\n" "" MPI4PY_INCLUDE ${MPI4PY_INCLUDE})
			else()
				message(WARNING "${Red}Python interface requires mpi4py python module.${ColourReset}")
			endif()
		else()
			set(PYDSP_COMPILE ON)
			set(PYDSP_I "${CMAKE_SOURCE_DIR}/src/PyDsp/PyDsp.i")
		endif()
	else()
		message(WARNING "${Red}Python interface requires SWIG.${ColourReset}")
	endif()
else()
	message(WARNING "${Red}Python interface requires phyton....${ColourReset}")
endif()
set(PYDSP_COMPILE OFF)
if (PYDSP_COMPILE)
	message(STATUS "${Blue}Python interface will be compiled.${ColourReset}")
	execute_process(COMMAND mkdir -p $ENV{PWD}/src)
	execute_process(COMMAND mkdir -p $ENV{PWD}/src/PyDsp)
	execute_process(COMMAND swig -python -c++ -I${MPI4PY_INCLUDE} -includeall -o $ENV{PWD}/src/PyDsp/PyDsp.cpp ${PYDSP_I})
else()
	message(WARNING "${Red}Python interface will not be compiled.${ColourReset}")
endif()

if (PYTHONLIBS_FOUND)
	set(DSP_INCLUDE_DIRS ${DSP_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${MPI4PY_INCLUDE})
	if (MPI_CXX_FOUND)
		set(DSP_INCLUDE_DIRS ${DSP_INCLUDE_DIRS} ${MPI4PY_INCLUDE})
	endif()
endif()

add_library(PyDsp SHARED $ENV{PWD}/src/PyDsp/PyDsp.cpp)
target_link_libraries(PyDsp Dsp)
#target_link_libraries(PyDsp Dsp python)
install(TARGETS PyDsp LIBRARY DESTINATION $ENV{PWD}/lib)
# if(PYDSP_COMPILE)
# 	if(APPLE)
# 		install(CODE "execute_process(COMMAND ln -fs $ENV{PWD}/src/PyDsp/libPyDsp.dylib $ENV{PWD}/lib/_PyDsp.dylib)")
# 	else()
# 		install(CODE "execute_process(COMMAND ln -fs $ENV{PWD}/src/PyDsp/libPyDsp.so $ENV{PWD}/lib/_PyDsp.so)")
# 	endif()
# 	install(CODE "execute_process(COMMAND cp $ENV{PWD}/src/PyDsp/PyDsp.py $ENV{PWD}/lib/PyDsp.py)")
# 	install(CODE "message(\"${Red}    export PYTHONPATH=$PYTHONPATH:$ENV{PWD}/lib${ColourReset}\")")
# endif()
